<resources>
    <string name="app_name">Timetable of classes</string>
    <string name="_54">Колледж связи №54</string>
    <string name="welcome">Добро Пожаловать!</string>
    <string name="description">Это приложение создано для того, чтобы было просто отслеживать актуальное расписание пар для студентов Колледжа Связи №54</string>
    <string name="description2"><![CDATA[Для начала работы нажмите кнопку <<Показать расписание>>]]></string>
    <string name="pressbutton">Для начала работы нажмите кнопку</string>
    <string name="showtastk">Показать расписание</string>
    <string name="good">Отлично!</string>
    <string name="description3">Для того, чтобы узнать расписание пар тебе нужно выбрать тип недели, которая у тебя идет в данный момент</string>
    <string name="typeweek">Выбери тип недели:</string>
    <string name="type1">Числитель</string>
    <string name="type2">Знаменатель</string>
    <string name="loy3">Расписание занятий - Числитель</string>
    <string name="tasktime">Расписание занятий</string>
    <string name="chislitel">Числитель</string>
    <string name="dayweek">Выберите день недели:</string>
    <string name="monday">Понедельник</string>
    <string name="Tuesday">Вторник</string>
    <string name="Wednesfay">Среда</string>
    <string name="thursday">Четверг</string>
    <string name="Friday">Пятница</string>
    <string name="Saturday">Суббота</string>
    <string name="znamenatel">Знаменатель</string>
    <string name="back"><![CDATA[<]]></string>
    <string name="selectgroup">Выберите группу:</string>
    <string name="isp98">1ИСП9-8</string>
    <string name="ips298">2ИСП9-8</string>
    <string name="isp398">3ИСП9-8</string>
    <string name="isp498">4ИСП9-8</string>
    <string name="r1">2-ОСАТ11-6</string>
    <string name="r2">2ИСП9-21</string>
    <string name="r3">3ИСП11-16</string>
    <string name="r4">4-ОСАТ9-5</string>
    <string name="r5">4-ИСП9-7</string>
    <string name="к6">Далее список групп будет пополняться</string>
    <string name="para">Пара</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="tree">3</string>
    <string name="four">4</string>
    <string name="discipl">Дисциплина</string>
    <string name="room">Кабинет</string>
    <string name="p1">Физ. культура</string>
    <string name="с1">Спортзал</string>
    <string name="p2">МДК 01.02</string>
    <string name="p3">Тех. механика</string>
    <string name="cab1">202</string>
    <string name="cab2">201</string>
    <string name="p4">МДК 02.01</string>
    <string name="cab3">203</string>
    <string name="zero">-</string>
    <string name="p5">САПР тех. процесов</string>
    <string name="cab4">208</string>
    <string name="p6">Безопасность жд</string>
    <string name="cab5">304</string>
    <string name="m0101">МДК 01.01</string>
    <string name="m0102">МДК 01.02</string>
    <string name="cab202">202</string>
    <string name="sapr">САПР тех. процессов</string>
    <string name="cab208">208</string>
    <string name="compmodel">Комп. моделирование</string>
    <string name="cab203">203</string>
    <string name="m0201">МДК 02.01</string>
    <string name="inyaz">Ин. яз</string>
    <string name="cab310">310</string>
    <string name="cab204">204</string>
    <string name="techmeth">Тех. механика</string>
    <string name="cab201">201</string>
    <string name="bez">Безопасность жд</string>
    <string name="cab304">304</string>
    <string name="five">5</string>
    <string name="cab405">405</string>
    <string name="cab402">402</string>
    <string name="sportzal">Спортзал</string>
    <string name="a58">58a</string>
    <string name="m0103">МДК 01.03</string>
    <string name="mengment">Менеджмент</string>
    <string name="cab52">52</string>
    <string name="showtime">Показать время начала пар</string>
    <string name="timepar">Время начала пар:</string>
    <string name="time">Время</string>
    <string name="nompar">Номер пары</string>
    <string name="timestart">Время начала пары</string>
    <string name="t1">8:20 - 9:55</string>
    <string name="t2">10:15 - 12:05</string>
    <string name="t11">8:30 - 10:10</string>
    <string name="t22">10:30 - 12:20</string>
    <string name="t33">12:40 - 14:30</string>
    <string name="t44">16:40 - 18:20</string>
    <string name="t55">14:50 - 16:30</string>
</resources>